--- a/gst-plugins-base/configure.ac
+++ b/gst-plugins-base/configure.ac
@@ -239,7 +239,8 @@ if test "x$HAVE_GTK_22" = "xyes"; then
   AC_PATH_PROG(QUERYLOADERS, gdk-pixbuf-query-loaders, no)
   GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
   AC_SUBST(GTK_VERSION)
-  GTK_BASE_DIR=`echo "$QUERYLOADERS" | sed "s/bin\/gdk-pixbuf-query-loaders\$//"`
+  GTK_PREFIX=`$PKG_CONFIG --variable=prefix gdk-pixbuf-2.0`
+  GTK_SYSCONFDIR=`$PKG_CONFIG --variable=prefix gdk-pixbuf-2.0`
   AC_SUBST(GTK_BASE_DIR)
 else
   PKG_CHECK_MODULES(GTK2, gtk+-2.0, HAVE_GTK_20=yes, HAVE_GTK_20=no)
@@ -253,6 +254,27 @@ AC_SUBST(GTK_LIBS)
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(HAVE_GTK)
 AM_CONDITIONAL(HAVE_GDK_LOADERS, test "x$HAVE_GTK_22" = "xyes")
+
+AC_ARG_WITH(gdk-pixbuf-loader-dir, 
+   AC_HELP_STRING([--with-gdk-pixbuf-loader-dir],
+   	[directory to install the gdk_pixbuf loader]),
+   [if test "x${withval}" != x ; then
+   	GDK_PIXBUF_LOADER_DIR=${withval}
+    else
+   	GDK_PIXBUF_LOADER_DIR="\$(libdir)/gtk-2.0/\$(GTK_VERSION)"
+    fi
+])
+
+GDK_PIXBUF_CONFFILE="\$(sysconfdir)/gtk-2.0/gdk-pixbuf.loaders"
+AC_ARG_WITH(gdk-pixbuf-conffile, 
+   AC_HELP_STRING([--with-gdk-pixbuf-conffile],
+   	[path to the gdk_pixbuf config file]),
+   [if test "x${withval}" != x ; then
+   	GDK_PIXBUF_CONFFILE=${withval}
+    else
+   	GDK_PIXBUF_CONFFILE="\$(sysconfdir)/gtk-2.0/gdk-pixbuf.loaders"
+    fi
+])
 
 dnl ===========================================================================
 dnl ============================= gst plug-ins ================================
