--- a/gst-plugins-good/gst/y4m/Makefile.am
+++ b/gst-plugins-good/gst/y4m/Makefile.am
@@ -2,8 +2,8 @@
 plugin_LTLIBRARIES = libgsty4menc.la
 
 libgsty4menc_la_SOURCES = gsty4mencode.c
-libgsty4menc_la_CFLAGS = $(GST_CFLAGS)
-libgsty4menc_la_LIBADD =
+libgsty4menc_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
+libgsty4menc_la_LIBADD = $(GST_LIBS)
 libgsty4menc_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = gsty4mencode.h
