gst/rtpmanager/Makefile.am: Add .h file so it can be disted properly.
Original commit message from CVS:
* gst/rtpmanager/Makefile.am:
Add .h file so it can be disted properly.

--- a/gst-plugins-good/gst/rtpmanager/Makefile.am
+++ b/gst-plugins-good/gst/rtpmanager/Makefile.am
@@ -13,6 +13,7 @@ noinst_HEADERS = gstrtpbin.h \
 		 gstrtpclient.h \
                  async_jitter_queue.h \
 		 gstrtpjitterbuffer.h \
+                 gstrtpptdemux.h \
 		 gstrtpsession.h
 
 libgstrtpmanager_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(ERROR_CFLAGS)
