gst/rtpmanager/: Added simple SSRC demuxer.
Original commit message from CVS:
* gst/rtpmanager/Makefile.am:
* gst/rtpmanager/gstrtpmanager.c: (plugin_init):
* gst/rtpmanager/gstrtpssrcdemux.c: (find_pad_for_ssrc),
(create_pad_for_ssrc), (gst_rtp_ssrc_demux_base_init),
(gst_rtp_ssrc_demux_class_init), (gst_rtp_ssrc_demux_init),
(gst_rtp_ssrc_demux_finalize), (gst_rtp_ssrc_demux_sink_event),
(gst_rtp_ssrc_demux_chain), (gst_rtp_ssrc_demux_src_event),
(gst_rtp_ssrc_demux_change_state):
* gst/rtpmanager/gstrtpssrcdemux.h:
Added simple SSRC demuxer.

--- a/gst-plugins-good/gst/rtpmanager/Makefile.am
+++ b/gst-plugins-good/gst/rtpmanager/Makefile.am
@@ -7,6 +7,7 @@ libgstrtpmanager_la_SOURCES = gstrtpmanager.c \
 			      async_jitter_queue.c \
 			      gstrtpjitterbuffer.c \
 			      gstrtpptdemux.c \
+			      gstrtpssrcdemux.c \
 			      gstrtpsession.c
 
 noinst_HEADERS = gstrtpbin.h \
@@ -14,6 +15,7 @@ noinst_HEADERS = gstrtpbin.h \
                  async_jitter_queue.h \
 		 gstrtpjitterbuffer.h \
                  gstrtpptdemux.h \
+                 gstrtpssrcdemux.h \
 		 gstrtpsession.h
 
 libgstrtpmanager_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(ERROR_CFLAGS)
