gst/rtpmanager/: Added custom marshallers for signals.
Original commit message from CVS:
* gst/rtpmanager/.cvsignore:
* gst/rtpmanager/Makefile.am:
* gst/rtpmanager/gstrtpbin-marshal.list:
Added custom marshallers for signals.
* gst/rtpmanager/gstrtpbin.c: (gst_rtp_bin_class_init):
* gst/rtpmanager/gstrtpbin.h:
Prepare for emiting pt map signals.
* gst/rtpmanager/gstrtpptdemux.c: (gst_rtp_pt_demux_class_init):
* gst/rtpmanager/gstrtpssrcdemux.c:
(gst_rtp_ssrc_demux_class_init):
Fix signals.

--- a/gst-plugins-good/gst/rtpmanager/Makefile.am
+++ b/gst-plugins-good/gst/rtpmanager/Makefile.am
@@ -1,5 +1,14 @@
-
 plugin_LTLIBRARIES = libgstrtpmanager.la
+
+glib_enum_define = GST_RTP_BIN
+glib_enum_prefix = gst_rtp_bin
+
+include $(top_srcdir)/common/glib-gen.mak
+
+built_sources = gstrtpbin-marshal.c
+built_headers = gstrtpbin-marshal.h
+
+BUILT_SOURCES = $(built_sources) $(built_headers)
 
 libgstrtpmanager_la_SOURCES = gstrtpmanager.c \
 			      gstrtpbin.c \
@@ -9,6 +18,9 @@ libgstrtpmanager_la_SOURCES = gstrtpmanager.c \
 			      gstrtpptdemux.c \
 			      gstrtpssrcdemux.c \
 			      gstrtpsession.c
+
+nodist_libgstrtpmanager_la_SOURCES = \
+      $(built_sources)
 
 noinst_HEADERS = gstrtpbin.h \
 		 gstrtpclient.h \
@@ -22,5 +34,8 @@ libgstrtpmanager_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(ERROR_CF
 libgstrtpmanager_la_LIBADD = $(GST_LIBS_LIBS)
 libgstrtpmanager_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS) $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) -lgstrtp-@GST_MAJORMINOR@
 
-EXTRA_DIST = 
+CLEANFILES = $(BUILT_SOURCES)
+
+EXTRA_DIST = gstrtpbin-marshal.list
+
 
