[MOVED FROM GOOD] Make sure to dist everything needed for win32 builds.
Original commit message from CVS:
* configure.ac:
* sys/Makefile.am:
* sys/directdraw/Makefile.am:
* sys/directsound/Makefile.am:
* sys/waveform/Makefile.am:
Make sure to dist everything needed for win32 builds.

--- a/gst-plugins-bad/sys/directdraw/Makefile.am
+++ b/gst-plugins-bad/sys/directdraw/Makefile.am
@@ -7,3 +7,5 @@ libgstdirectdrawsink_la_LIBADD = $(DIRECTDRAW_LIBS) \
 	$(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) -lgstvideo-$(GST_MAJORMINOR) \
 	-lgstinterfaces-$(GST_MAJORMINOR)
 libgstdirectdrawsink_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS) $(DIRECTDRAW_LDFLAGS)
+
+noinst_HEADERS= gstdirectdrawsink.h
