registry: Add registry helper phase 1
Phase 1 of adding the registry scan helper

--- a/gstreamer/configure.ac
+++ b/gstreamer/configure.ac
@@ -681,6 +681,7 @@ libs/gst/check/libcheck/Makefile
 libs/gst/check/libcheck/check.h
 libs/gst/controller/Makefile
 libs/gst/dataprotocol/Makefile
+libs/gst/helpers/Makefile
 libs/gst/net/Makefile
 plugins/Makefile
 plugins/indexers/Makefile
