--- a/gstreamer/libs/gst/Makefile.am
+++ b/gstreamer/libs/gst/Makefile.am
@@ -18,7 +18,13 @@ endif
 endif
 endif
 
+if GST_DISABLE_REGISTRY
+SUBDIRS_HELPERS =
+else
+SUBDIRS_HELPERS = helpers
+endif
+
 SUBDIRS_ALWAYS = base controller dataprotocol
 
-SUBDIRS = $(SUBDIRS_ALWAYS) $(SUBDIRS_CHECK) $(SUBDIRS_NET)
-DIST_SUBDIRS = $(SUBDIRS_ALWAYS) check net
+SUBDIRS = $(SUBDIRS_ALWAYS) $(SUBDIRS_CHECK) $(SUBDIRS_NET) $(SUBDIRS_HELPERS)
+DIST_SUBDIRS = $(SUBDIRS_ALWAYS) check net helpers
