vdpau: add basic base class for vdpau decoders

--- a/gst-plugins-bad/sys/vdpau/Makefile.am
+++ b/gst-plugins-bad/sys/vdpau/Makefile.am
@@ -1,11 +1,14 @@
+plugin_LTLIBRARIES = libgstvdpau.la
 
-lib_LTLIBRARIES = \
-	libgstvdpau.la
+libgstvdpau_la_SOURCES = \
+	gstvdpaudecoder.c
 
-libgstvdpau_la_SOURCES =
-
-libgstvdpau_la_CFLAGS = $(GST_CFLAGS)
-libgstvdpau_la_LIBADD = $(GST_LIBS)
+libgstvdpau_la_CFLAGS = $(GST_CFLAGS) $(X11_CFLAGS) -Ivdpau
+libgstvdpau_la_LIBADD = $(GST_LIBS) $(X11_LIBS) -lvdpau
 libgstvdpau_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstvdpau_la_LIBTOOLFLAGS = --tag=disable-static
+
+noinst_HEADERS = \
+	gstvdpaudecoder.h
+	
 
