--- a/gst-plugins-bad/sys/vdpau/Makefile.am
+++ b/gst-plugins-bad/sys/vdpau/Makefile.am
@@ -1,7 +1,8 @@
 plugin_LTLIBRARIES = libgstvdpau.la
 
 libgstvdpau_la_SOURCES = \
-	gstvdpaudecoder.c
+	gstvdpaudecoder.c\
+	gstvdpauh264decoder.c
 
 libgstvdpau_la_CFLAGS = $(GST_CFLAGS) $(X11_CFLAGS) -Ivdpau
 libgstvdpau_la_LIBADD = $(GST_LIBS) $(X11_LIBS) -lvdpau
@@ -9,6 +10,8 @@ libgstvdpau_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstvdpau_la_LIBTOOLFLAGS = --tag=disable-static
 
 noinst_HEADERS = \
-	gstvdpaudecoder.h
+	gstvdpaudecoder.h\
+	vdpauvariables.h \
+	gstvdpauh264decoder.h
 	
 
