vdpau: focus on mpeg instead of h264

--- a/gst-plugins-bad/sys/vdpau/Makefile.am
+++ b/gst-plugins-bad/sys/vdpau/Makefile.am
@@ -2,7 +2,7 @@ plugin_LTLIBRARIES = libgstvdpau.la
 
 libgstvdpau_la_SOURCES = \
 	gstvdpaudecoder.c\
-	gstvdpauh264decoder.c
+	gstvdpaumpegdecoder.c
 
 libgstvdpau_la_CFLAGS = $(GST_CFLAGS) $(X11_CFLAGS) -Ivdpau
 libgstvdpau_la_LIBADD = $(GST_LIBS) $(X11_LIBS) -lvdpau
@@ -12,6 +12,6 @@ libgstvdpau_la_LIBTOOLFLAGS = --tag=disable-static
 noinst_HEADERS = \
 	gstvdpaudecoder.h\
 	vdpauvariables.h \
-	gstvdpauh264decoder.h
+	gstvdpaumpegdecoder.h
 	
 
