--- a/gst-plugins-bad/sys/vdpau/Makefile.am
+++ b/gst-plugins-bad/sys/vdpau/Makefile.am
@@ -1,8 +1,9 @@
 plugin_LTLIBRARIES = libgstvdpau.la
 
 libgstvdpau_la_SOURCES = \
-	gstvdpaudecoder.c\
-	gstvdpaumpegdecoder.c
+	gstvdpaudecoder.c \
+	gstvdpaumpegdecoder.c \
+	mpegutil.c
 
 libgstvdpau_la_CFLAGS = $(GST_CFLAGS) $(X11_CFLAGS) -Ivdpau
 libgstvdpau_la_LIBADD = $(GST_LIBS) $(X11_LIBS) -lvdpau
@@ -10,8 +11,9 @@ libgstvdpau_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstvdpau_la_LIBTOOLFLAGS = --tag=disable-static
 
 noinst_HEADERS = \
-	gstvdpaudecoder.h\
+	gstvdpaudecoder.h \
 	vdpauvariables.h \
-	gstvdpaumpegdecoder.h
+	gstvdpaumpegdecoder.h \
+    mpegutil.h
 	
 
