--- a/gst-plugins-bad/sys/vdpau/Makefile.am
+++ b/gst-plugins-bad/sys/vdpau/Makefile.am
@@ -1,9 +1,10 @@
 plugin_LTLIBRARIES = libgstvdpau.la
 
 libgstvdpau_la_SOURCES = \
+	gst-vdpau-device.c \
 	gstvdpaudecoder.c \
 	gstvdpaumpegdecoder.c \
-	mpegutil.c
+	mpegutil.c \
 
 libgstvdpau_la_CFLAGS = $(GST_CFLAGS) $(X11_CFLAGS) -Ivdpau
 libgstvdpau_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) \
@@ -12,8 +13,9 @@ libgstvdpau_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstvdpau_la_LIBTOOLFLAGS = --tag=disable-static
 
 noinst_HEADERS = \
+	gst-vdpau-device.h \
 	gstvdpaudecoder.h \
 	gstvdpaumpegdecoder.h \
-    mpegutil.h
+	mpegutil.h
 	
 
