vdpau: remove extra \ from Makefile.am

--- a/gst-plugins-bad/sys/vdpau/Makefile.am
+++ b/gst-plugins-bad/sys/vdpau/Makefile.am
@@ -4,7 +4,7 @@ libgstvdpau_la_SOURCES = \
 	gst-vdpau-device.c \
 	gstvdpaudecoder.c \
 	gstvdpaumpegdecoder.c \
-	mpegutil.c \
+	mpegutil.c
 
 libgstvdpau_la_CFLAGS = $(GST_CFLAGS) $(X11_CFLAGS) -Ivdpau
 libgstvdpau_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) \
