--- a/gst-plugins-bad/sys/vdpau/Makefile.am
+++ b/gst-plugins-bad/sys/vdpau/Makefile.am
@@ -4,7 +4,9 @@ libgstvdpau_la_SOURCES = \
 	gstvdpaudevice.c \
 	gstvdpaudecoder.c \
 	gstvdpaumpegdecoder.c \
-	mpegutil.c
+	mpegutil.c \
+	gstvdpauvideoyuv.c \
+	gstvdpauvideobuffer.c
 
 libgstvdpau_la_CFLAGS = $(GST_CFLAGS) $(X11_CFLAGS) -Ivdpau
 libgstvdpau_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) \
@@ -16,6 +18,8 @@ noinst_HEADERS = \
 	gstvdpaudevice.h \
 	gstvdpaudecoder.h \
 	gstvdpaumpegdecoder.h \
+	gstvdpauvideoyuv.h \
+	gstvdpauvideobuffer.h \
 	mpegutil.h
 	
 
