--- a/gst-plugins-base/pkgconfig/gstreamer-plugins-base-uninstalled.pc.in
+++ b/gst-plugins-base/pkgconfig/gstreamer-plugins-base-uninstalled.pc.in
@@ -9,7 +9,7 @@ Description: Streaming media framework, base plugins libraries, uninstalled
 Version: @VERSION@
 Requires: gstreamer-@GST_MAJORMINOR@
 
-Libs: -L${libdir}/audio -L${libdir}/cdda -L${libdir}/fft -L${libdir}/floatcast -L${libdir}/interfaces -L${libdir}/netbuffer -L${libdir}/riff -L${libdir}/rtp -L${libdir}/rtsp -L${libdir}/sdp -L${libdir}/tag -L${libdir}/pbutils -L${libdir}/video
+Libs: -L${libdir}/audio -L${libdir}/cdda -L${libdir}/fft -L${libdir}/floatcast -L${libdir}/interfaces -L${libdir}/netbuffer -L${libdir}/riff -L${libdir}/rtp -L${libdir}/rtsp -L${libdir}/sdp -L${libdir}/tag -L${libdir}/pbutils -L${libdir}/video -L${libdir}/app
 Cflags: -I${includedir} -I@srcdir@/../gst-libs
 
 libraries=audio cdda fft floatcast interfaces netbuffer riff tag pbutils video
