--- a/gstreamer/tests/benchmarks/Makefile.am
+++ b/gstreamer/tests/benchmarks/Makefile.am
@@ -3,7 +3,8 @@ noinst_PROGRAMS = \
         complexity \
         init \
         mass-elements \
-        gstpollstress
+        gstpollstress \
+        gstclockstress
 
 LDADD = $(GST_OBJ_LIBS)
 AM_CFLAGS = $(GST_OBJ_CFLAGS)
