--- a/gst-plugins-bad/sys/Makefile.am
+++ b/gst-plugins-bad/sys/Makefile.am
@@ -40,6 +40,12 @@ else
 OSS4_DIR=
 endif
 
+if USE_OSX_VIDEO
+OSX_VIDEO_DIR=osxvideo
+else
+OSX_VIDEO_DIR=
+endif
+
 if USE_QUICKTIME
 QT_DIR=qtwrapper
 else
@@ -58,8 +64,8 @@ else
 ACM_DIR=
 endif
 
-SUBDIRS = $(ACM_DIR) $(DVB_DIR) $(FBDEV_DIR) $(OSS4_DIR) $(QT_DIR) $(VCD_DIR) $(WININET_DIR)
+SUBDIRS = $(ACM_DIR) $(DVB_DIR) $(FBDEV_DIR) $(OSS4_DIR) $(OSX_VIDEO_DIR) $(QT_DIR) $(VCD_DIR) $(WININET_DIR)
 
 DIST_SUBDIRS = acmenc acmmp3dec dvb fbdev dshowdecwrapper dshowsrcwrapper dshowvideosink \
-			   oss4 qtwrapper vcd wasapi wininet winks winscreencap
+			   oss4 osxvideo qtwrapper vcd wasapi wininet winks winscreencap
 
