only use struct ip_mreqn if it is detected
* configure.ac: Make an explicit check for struct ip_mreqn.

* gst/udp/gstudpnetutils.c: Use HAVE_IP_MREQN instead of the ad-hoc checks.

--- a/gst-plugins-good/configure.ac
+++ b/gst-plugins-good/configure.ac
@@ -179,6 +179,12 @@ dnl Check for mmap (needed by electricfence plugin)
 AC_FUNC_MMAP
 AM_CONDITIONAL(GST_HAVE_MMAP, test "x$ac_cv_func_mmap_fixed_mapped" == "xyes")
 
+dnl Check for mmap (needed by electricfence plugin)
+
+AC_CHECK_TYPE([struct ip_mreqn], [
+              AC_DEFINE(HAVE_IP_MREQN,, [Define if we have struct ip_mreqn])],,
+              [#include <netinet/in.h>])
+
 dnl *** checks for dependency libraries ***
 
 dnl GLib is required
