--- a/gstreamer/configure.ac
+++ b/gstreamer/configure.ac
@@ -681,6 +681,7 @@ tests/examples/launch/Makefile
 tests/examples/manual/Makefile
 tests/examples/metadata/Makefile
 tests/examples/queue/Makefile
+tests/examples/streams/Makefile
 tests/examples/typefind/Makefile
 tests/examples/xml/Makefile
 tools/Makefile
